--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,15 +1,20 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
-  "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    }
-  ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "manifest_version": 2,
+
+  "name": "Teacher Resource Finder Extension",
+  "author": "Ruth Mesfun",
+  "description": "This extention helps you grab great resources from Teachers Pay Teachers based on Common Core Standards",
+  "version": "1.0.1",
+
+  "browser_action": {
+    "default_popup": "index.html",
+    "default_title": "Open the popup"
+  },
+  "icons": {
+    "16": "apple.png",
+    "48": "apple.png",
+    "128": "apple.png"
+  },
+  "permissions": [
+  ]
 }
